# moment-nvr

./: configure.in
docs/: Architecture.txt
moment-nvr/: Makefile.am  channel_recorder.cpp  channel_recorder.h  get_file_session.cpp  get_file_session.h  media_reader.cpp  media_reader.h  media_recorder.cpp  media_recorder.h  media_viewer.cpp  media_viewer.h  mod_nvr.cpp  moment_nvr_module.cpp  moment_nvr_module.h  naming_scheme.cpp  naming_scheme.h  nvr_cleaner.cpp  nvr_cleaner.h  nvr_file_iterator.cpp  nvr_file_iterator.h  types.cpp  types.h
web/: index.tpl
